<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/match_info_activity_title"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/matchId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="numberSigned"
            android:maxLength="19"/>

        <Button
            android:id="@+id/loadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/matchId"
            android:layout_marginTop="10dp"
            android:backgroundTint="#ffffff"
            android:textColor="@color/black"
            android:text="@string/match_info_activity_load_button"/>

        <TextView
            android:id="@+id/infoTitle"
            app:layout_constraintTop_toBottomOf="@id/loadButton"
            android:text="@string/match_info_activity_info_title"
            style="@style/subTitle"/>

        <LinearLayout
            android:id="@+id/matchInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoTitle">
            <TextView
                android:text="@string/match_info_activity_label_teams"
                style="@style/matchInfoRowLabel"/>
            <TextView
                android:id="@+id/teams"
                style="@style/matchInfoRow"/>

            <TextView
                android:text="@string/match_info_activity_label_date"
                style="@style/matchInfoRowLabel"/>
            <TextView
                android:id="@+id/matchDate"
                style="@style/matchInfoRow"
                android:layout_marginTop="@dimen/matchInfoMarginTop" />

            <TextView
                android:text="@string/match_info_activity_label_tournament"
                style="@style/matchInfoRowLabel"/>
            <TextView
                android:id="@+id/tournamentName"
                style="@style/matchInfoRow"
                android:layout_marginTop="@dimen/matchInfoMarginTop" />

            <TextView
                android:text="@string/match_info_activity_label_score"
                style="@style/matchInfoRowLabel"/>
            <TextView
                android:id="@+id/matchScore"
                style="@style/matchInfoRow"
                android:layout_marginTop="@dimen/matchInfoMarginTop" />
        </LinearLayout>

        <TextView
            android:id="@+id/videosTitle"
            app:layout_constraintTop_toBottomOf="@id/matchInfoContainer"
            android:text="@string/match_info_activity_videos_title"
            style="@style/subTitle"/>

        <TextView
            android:id="@+id/videosLoading"
            app:layout_constraintTop_toBottomOf="@id/videosTitle"
            style="@style/matchInfoRow"/>

        <LinearLayout
            android:id="@+id/videosContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/videosLoading"
            android:layout_marginTop="15dp"
            android:orientation="vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>